GKE/sampleIaC.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: nginx-group
  labels:
    app: nginx-group

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx-deploy1
  name: nginx-deploy1
  namespace: nginx-group
spec:
  selector:
    matchLabels:
      app: nginx-deploy1
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx-deploy1
      name: nginx-deploy1
    spec:
      containers:
        - name: nginx
          image: nginx
          volumeMounts:
            - readOnly: true
              mountPath: /usr/share/nginx/html
              name: html-files
      volumes:
        - name: html-files
          configMap:
            name: static-files1

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx-deploy2
  name: nginx-deploy2
  namespace: nginx-group
spec:
  selector:
    matchLabels:
      app: nginx-deploy2
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx-deploy2
      name: nginx-deploy2
    spec:
      containers:
        - name: nginx
          image: nginx
          volumeMounts:
            - readOnly: true
              mountPath: /usr/share/nginx/html
              name: html-files
      volumes:
        - name: html-files
          configMap:
            name: static-files2

---
kind: Service
apiVersion: v1
metadata:
  name: service-nginx1
  namespace: nginx-group
  labels:
    app: service-nginx1
spec:
  type: NodePort
  selector:
    app: nginx-deploy1
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80

---
kind: Service
apiVersion: v1
metadata:
  name: service-nginx2
  namespace: nginx-group
  labels:
    app: service-nginx2
spec:
  type: NodePort
  selector:
    app: nginx-deploy2
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: nginx-group
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: hello-world.nginx
      http:
        paths:
          - path: /hello-world1
            pathType: Prefix
            backend:
              service:
                name: service-nginx1
                port:
                  number: 80
          - path: /hello-world2
            pathType: Prefix
            backend:
              service:
                name: service-nginx2
                port:
                  number: 80
